--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
   "dependencies": {
     "gatsby": "^2.3.31",
     "gatsby-image": "^2.0.40",
+    "gatsby-paginate": "^1.0.17",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-source-filesystem": "^2.0.32",
     "gatsby-source-wordpress": "^3.0.57",
     "gatsby-transformer-sharp": "^2.1.18",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "uikit": "^3.1.4"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
