--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "disqus-react": "^1.0.5",
     "gatsby": "^2.3.31",
     "gatsby-image": "^2.0.40",
     "gatsby-paginate": "^1.0.17",
