--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "wpspark.io",
   "dependencies": {
     "disqus-react": "^1.0.5",
-    "gatsby": "^2.4.5",
+    "gatsby": "^2.4.6",
     "gatsby-image": "^2.0.41",
     "gatsby-paginate": "^1.0.17",
     "gatsby-plugin-glamor": "^2.0.5",
@@ -15,7 +15,7 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-typography": "^2.2.0",
-    "gatsby-source-wordpress": "^3.0.59",
+    "gatsby-source-wordpress": "^3.0.60",
     "gatsby-transformer-sharp": "^2.1.19",
     "glamor": "^2.20.40",
     "lodash": "^4.17.10",
@@ -41,8 +41,9 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "start": "npm run develop",
-    "predeploy": "gatsby build --prefix-paths"
+    "start": "npm run clean && npm run develop",
+    "predeploy": "gatsby build --prefix-paths",
+    "clean": "rm -rf .cache"
   },
   "devDependencies": {
     "eslint": "^4.1.1",
