--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "author": "wpspark.io",
   "dependencies": {
+    "bulma": "^0.7.4",
     "disqus-react": "^1.0.5",
     "gatsby": "^2.4.6",
     "gatsby-image": "^2.0.41",
@@ -27,8 +28,7 @@
     "react-typography": "^0.16.13",
     "styled-components": "^4.2.0",
     "typography": "^0.16.16",
-    "typography-theme-wordpress-2016": "^0.16.19",
-    "uikit": "^3.1.4"
+    "typography-theme-wordpress-2016": "^0.16.19"
   },
   "keywords": [
     "gatsby"
