--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "author": "wpspark.io",
   "dependencies": {
+    "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "disqus-react": "^1.0.5",
     "gatsby": "^2.4.6",
