npm command update to remove cache

--- a/env/.env.local
+++ b/env/.env.local
@@ -1,4 +1,4 @@
 baseUrl = "localhost/wp"
 protocol = "http"
 disqusShortname = "themesgrove-blog"
-GATSBY_BUILD_DIR = "local"
+GATSBY_BUILD_DIR = "mywebsite"
