--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "develop": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
+    "build": "npm run clean && gatsby build",
+    "serve": "npm run clean && gatsby serve",
     "start": "npm run clean && npm run develop",
     "predeploy": "gatsby build --prefix-paths",
     "clean": "rm -rf .cache"
