--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-typography": "^2.2.0",
-    "gatsby-source-wordpress": "git+https://your_username:your_password@gitlab.com/wpspark/gatsby-source-wordpress.git#master",
+    "gatsby-source-wordpress": "git+https://gitlab.com/wpspark/gatsby-source-wordpress.git#master",
     "gatsby-transformer-sharp": "^2.1.19",
     "glamor": "^2.20.40",
     "lodash": "^4.17.10",
