--- a/env/.env.local
+++ b/env/.env.local
@@ -1,4 +1,4 @@
-baseUrl = "localhost/wp"
+baseUrl = "localhost/tx/onepager"
 protocol = "http"
 disqusShortname = "themesgrove-blog"
 GATSBY_BUILD_DIR = "mywebsite"
