pull & marge with master branch

--- a/env/.env.local
+++ b/env/.env.local
@@ -1,4 +1,5 @@
-baseUrl = "localhost/tx/onepager"
+
+baseUrl = "dev.wptheme"
 protocol = "http"
 disqusShortname = "themesgrove-blog"
 GATSBY_BUILD_DIR = "mywebsite"
