remove tag query

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BlogTheme1-WpSpark",
+  "name": "Callisto",
   "private": true,
   "description": "First blog theme of WpSpark",
   "version": "1.0.0",
